--- a/jemdoc.css
+++ b/jemdoc.css
@@ -17,7 +17,7 @@ html {
 }
 
 body { 
-  font-family: Georgia, serif;
+  font-family: "Helvetica Neue", Helvetica, Tahoma, Arial, sans-serif;;
   color: #000;
   background-color: #ffffff; 
   text-align:left; /* for IE */
@@ -160,10 +160,13 @@ h3 {
 }
 
 p {
+	font-family: Lato;
+	font-style: normal;
+	font-weight: 400;
 	margin-top: 0.0em;
 	margin-bottom: 0.8em;
 	padding: 0;
-	line-height: 1.3;
+	line-height: 1.2;
 }
 
 pre {
