--- a/jemdoc.css
+++ b/jemdoc.css
@@ -241,6 +241,17 @@ h2 + h3 {
     padding-top: 0.2em;
 }
 
+h4 {
+	font-family: 'Lato';
+	font-style: normal;
+	font-size: 18px;
+	font-weight: 400;
+	margin-top: 0.0em;
+	margin-bottom: 0.8em;
+	padding: 0;
+	line-height: 22px;
+}
+
 p {
 	font-family: 'Lato';
 	font-style: normal;
